# LEMA

./: .gitignore  README.md  check_hf.py  check_mistral.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml  verify_install.yml
demo_model/: config.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  LEMA Framework Proposal.md  USER_GUIDE.md
examples/: benchmark_runner.py  demo_lema.py  generate_dummy_gpt2.py  generate_medium_gpt2.py
examples/kaggle/: bench_cpu_offload.py  bench_longseq.py  bench_strategy.py  bench_vram_stability.py  benchmark.ipynb  benchmark_logic.py  cpp_vs_python_benchmark.py  scaling_benchmark.py  speed_benchmark.py
lema_checkpoints/final_demo/: lema_config.json
src/lema/: README.md  __init__.py  _config.py  _gbi.py  _lora.py  _memory.py  _model.py  _trainer.py  config.py
src/lema/_csrc/: memory_manager.cpp
src/lema/_utils/: __init__.py  _conversion.py  _logger.py  _model_utils.py
src/lema/adapters/: __init__.py  _base.py  _gpt2.py  _lfm2.py  _llama.py  _mistral.py  _mixtral.py
src/lema/core/: gbi.py  lora.py  memory.py  model.py
src/lema/csrc/: memory_manager.h
src/lema/engine/: trainer.py
src/lema/models/: __init__.py  base.py  gpt2.py  lfm2.py  llama.py  mistral.py  mixtral.py
src/lema/utils/: conversion.py  logger.py  model_utils.py
tasks/: fine_tune_lfm2_5.py  fine_tune_llama_7b.py  fine_tune_llama_7b_config.py  fine_tune_mistral.py  fine_tune_mixtral.py  fine_tune_smollm.py
tests/: conftest.py  test_core_components.py  test_gradient_equivalence.py  test_high_level_api.py  test_lfm2_adapter.py  test_llama_forward.py  test_mistral_mixtral.py  test_training_loop.py
tools/: generate_graphs.py  generate_kaggle_bundle.py
