[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lema"
version = "1.0.0"
description = "Layer-wise Efficient Memory Abstraction: Virtualizing GPU memory for LLM training."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
  {name = "LEMA Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers==5.0.0",
    "safetensors>=0.3.0",
    "psutil",
    "tqdm>=4.0.0",
    "huggingface-hub>=0.16.0",
    "accelerate>=0.20.0",
    "peft>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/pomilon/LEMA"
"Bug Tracker" = "https://github.com/pomilon/LEMA/issues"

[tool.setuptools.packages.find]
where = ["src"]
